possible fixes for json editor.  Removed the angular 2 wrapper and wrapped it myself

--- a/src/app/components/config-editor/config-editor.component.scss
+++ b/src/app/components/config-editor/config-editor.component.scss
@@ -12,7 +12,7 @@
     //flex-grow: 10;
     display: flex;
     position: absolute;
-    json-editor {
+    div {
         height: 100%;
         width: 100%;
     }
